--- a/CalculoIMC/index.html
+++ b/CalculoIMC/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -15,14 +15,18 @@
      
 
         <form action="/" id="form" method="POST">
+            <label for="peso">Peso</label>
+            <input type="text" id="peso"  name="peso">
 
+            <label for="peso">Peso</label>
+            <input type="text" id="altura" name="altura">
 
-          
+            <button type="submit">Enviar</button>
         </form>
         <div id="resultado"></div>
     </section>
 
-    <script src="main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
